0.1.3:
 * allow writing to be cancelled (much) more often
 * display filesizes
 * significant write performance improvements for (very) large numbers of files
 * icon
 * bug: when creating a new directory, it seems like the first file is being
   renamed instead of the new directory

0.1.2:
 * pause button when writing/extracting
 * internationalisation
 * Portuguese translation
 * more error handling while working (writing/extracting)
 * option to automatically close progress windows when finished
 * an option in warnings to stop them from being shown again, and a button in
   the preferences window to re-enable them all
 * editor window title indicates the disk image filename and whether it has
   unsaved changes