@@ -3,6 +3,7 @@
  * display filesizes
  * significant write performance improvements for (very) large numbers of files
  * icon
+ * desktop entry
  * bug: when creating a new directory, it seems like the first file is being
    renamed instead of the new directory
 
